<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/div_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/app_title"
            android:textStyle="bold"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="1"
            android:shadowRadius="0.1"
            app:flow_horizontalBias="0.9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/unipd_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/unipd_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/unipd_logo_description"
            android:src="@drawable/unipd_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/unipd_email"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="1"
            android:shadowRadius="0.1"
            android:text="@string/developer"
            android:textColor="@color/white"
            android:textSize="@dimen/developer_info"
            app:layout_constraintBottom_toBottomOf="@id/unipd_logo"
            app:layout_constraintLeft_toLeftOf="@id/unipd_email"

            app:layout_constraintTop_toTopOf="@+id/unipd_logo"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/unipd_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="1"
            android:shadowRadius="0.1"
            android:text="@string/unipd_id"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@id/unipd_logo"
            app:layout_constraintLeft_toLeftOf="@id/unipd_email"
            app:layout_constraintTop_toBottomOf="@+id/developer"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/unipd_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="1"
            android:shadowRadius="0.1"
            android:text="@string/unipd_email"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@id/unipd_logo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unipd_id"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/div_title">

        <TextView
            android:id="@+id/title_position_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_title_margin"
            android:text="@string/location_details_title"
            android:textSize="@dimen/detail_title_size"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/position_details"
            android:text="@string/time_location_detail"
            android:textColor="@color/black"
            android:textSize="@dimen/saving_time"
            app:layout_constraintTop_toBottomOf="@id/title_position_detail"
            app:layout_constraintLeft_toLeftOf="@id/title_position_detail"/>

        <TextView
            android:id="@+id/location_latitude_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/position_details"
            android:text="@string/latitude_read_detail"
            android:textColor="@color/black"
            android:textSize="@dimen/saving_time"
            app:layout_constraintTop_toBottomOf="@id/time_label"
            app:layout_constraintLeft_toLeftOf="@id/title_position_detail"/>

        <TextView
            android:id="@+id/location_longitude_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/position_details"
            android:text="@string/longitude_read_detail"
            android:textColor="@color/black"
            android:textSize="@dimen/saving_time"
            app:layout_constraintTop_toBottomOf="@id/location_latitude_detail"
            app:layout_constraintLeft_toLeftOf="@id/title_position_detail"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_to_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/arrow_back"
        android:contentDescription="@string/back_button_desctiption"/>

</androidx.constraintlayout.widget.ConstraintLayout>